# KCF-with-Kalman

./: .gitignore  CMakeLists.txt  README.md
data/init/: param.yaml
src/: CMakeLists.txt  main.cpp
src/kalman/: CMakeLists.txt  Kalman.cpp  Kalman.h
src/kcf/: CMakeLists.txt  KCF.cpp
src/process/: CMakeLists.txt  process.cpp  process.h
src/process/kalman/: Kalman.cpp  Kalman.h
src/process/kcf/: KCF.h
src/util/: CMakeLists.txt  util.cpp  util.h
